<resources>
    <string name="app_name">记账软件</string>
    <string name="sync_setting">同步设置</string>
    <string name="webdav_address">WebDav 地址</string>
    <string name="account">账户</string>
    <string name="password">密码</string>
    <string name="save">保存</string>
    <string name="input_webdav_address">输入您的WebDav 地址</string>
    <string name="input_account">输入您的账户</string>
    <string name="input_password">输入您的密码</string>
    <string name="default_webdav_address">https://dav.jianguoyun.com/dav/</string>
    <string name="complete_info">请填写完整信息</string>
    <string name="save_success">保存成功</string>
    <string name="sync_from_network">在线同步</string>
    <string name="check_network_and_account">读取失败，请检查账户信息和网络</string>
    <string name="go_to_settings">请先到同步设置中配置相关信息</string>
    <string name="sync_confirm">在线同步之后会覆盖本地账本，确定继续吗?</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="remote_dir_not_exits">远程目录不存在，请确认</string>
    <string name="remote_db_not_exits">远程数据库不存在，请确认</string>
    <string name="auto_restore_backup">检测到备份文件存在，是否恢复</string>
    <string name="already_update">已同步最新数据</string>
    <string name="query">查账</string>
    <string name="note">记账</string>
    <string name="name">姓名</string>
    <string name="money">金额</string>
    <string name="type">类型</string>
    <string name="date">时间</string>
    <string name="comment">备注</string>
    <string name="loan">借款</string>
    <string name="repay">还款</string>
    <string name="close">关闭</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="confirm_del_note">确定删除这笔账单吗</string>
    <string name="query_by_name">查询姓名</string>
    <string name="start_date">开始时间</string>
    <string name="end_date">结束时间</string>
    <string name="line">---</string>
    <string name="comment_tip"><font size="14">备注可以不填</font></string>
    <string name="total_loan">总计借款: %1$.2f</string>
    <string name="total_repay">总计还款: %1$.2f</string>
    <string name="total_diff">总计差额: %1$.2f</string>
    <string name="part_repay">部分还款</string>
    <string name="batch">批量添加</string>
    <string name="part_tips"><font size="14">可以不填</font></string>
    <string name="name_empty_tips">请先输入姓名</string>
    <string name="filed_not_set">请检查信息是否填写完整</string>
    <string name="wrong_money">请输入正确格式的金额</string>
    <string name="note_success">记账成功</string>
    <string name="edit_success">修改成功</string>

    <string name="holder_name">姓名: %s</string>
    <string name="holder_type_money">%s: %s</string>
    <string name="holder_part_repay">部分还款: %s</string>
    <string name="holder_date">时间: %s</string>
    <string name="holder_comment">备注: %s</string>

</resources>