<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_50"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            style="@style/NoteTitleStyle"
            android:layout_marginStart="4dp"
            android:text="@string/name" />

        <TextView
            style="@style/NoteTitleStyle"
            android:text="@string/money" />

        <TextView
            style="@style/NoteTitleStyle"
            android:text="@string/type" />

        <TextView
            style="@style/NoteTitleStyle"
            android:text="@string/date" />

        <TextView
            style="@style/NoteTitleStyle"
            android:layout_weight="1.3"
            android:layout_marginEnd="10dp"
            android:text="@string/comment" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/totalLoanTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_loan" />

        <TextView
            android:id="@+id/totalRepayTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_repay" />

        <TextView
            android:id="@+id/totalDiffTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_diff" />

    </LinearLayout>

</LinearLayout>