<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            style="@style/DialogTitleStyle"
            android:text="@string/name" />

        <TextView
            android:id="@+id/nameTv"
            style="@style/DialogTextStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/DialogTitleStyle"
            android:text="@string/money" />

        <TextView
            android:id="@+id/moneyTv"
            style="@style/DialogTextStyle" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/repayLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <TextView
            style="@style/DialogTitleStyle"
            android:text="@string/repay" />

        <TextView
            android:id="@+id/repayTv"
            style="@style/DialogTextStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/DialogTitleStyle"
            android:text="@string/type" />

        <TextView
            android:id="@+id/typeTv"
            style="@style/DialogTextStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/DialogTitleStyle"
            android:text="@string/date" />

        <TextView
            android:id="@+id/dateTv"
            style="@style/DialogTextStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/DialogTitleStyle"
            android:text="@string/comment" />

        <TextView
            android:id="@+id/commentTv"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginEnd="5dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/editButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textColor="@color/green_500" />

        <Button
            android:id="@+id/deleteButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textColor="@color/red_a200" />

        <Button
            android:id="@+id/closeButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:textColor="@color/blue_500" />

    </LinearLayout>

</LinearLayout>