<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="5dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="0dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/nameTv"
            style="@style/NoteTitleStyle"
            android:layout_marginStart="5dp"
            android:text="@string/name" />

        <TextView
            android:id="@+id/moneyTv"
            style="@style/NoteTitleStyle"
            android:text="@string/money" />

        <TextView
            android:id="@+id/typeTv"
            style="@style/NoteTitleStyle"
            android:text="@string/type" />

        <TextView
            android:id="@+id/dateTv"
            style="@style/NoteTitleStyle"
            android:text="@string/date" />

        <TextView
            android:id="@+id/commentTv"
            style="@style/NoteTitleStyle"
            android:layout_marginEnd="5dp"
            android:layout_weight="1.3"
            android:text="@string/comment" />

    </LinearLayout>

</androidx.cardview.widget.CardView>

