<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_50"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="0dp"
        app:cardElevation="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    style="@style/DialogTitleStyle"
                    android:text="@string/name" />

                <AutoCompleteTextView
                    android:id="@+id/nameAutoTv"
                    style="@style/DialogEditTextStyle"
                    android:layout_gravity="top"
                    android:gravity="top"
                    android:imeOptions="actionNext"
                    android:singleLine="true" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/batchCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/batch_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/batch" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/DialogTitleStyle"
                    android:text="@string/money" />

                <EditText
                    android:id="@+id/moneyEdit"
                    style="@style/DialogEditTextStyle"
                    android:layout_width="match_parent"
                    android:digits="0123456789."
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/partMoneyTv"
                    style="@style/DialogTitleStyle"
                    android:layout_width="80dp"
                    android:text="@string/part_repay" />

                <EditText
                    android:id="@+id/partMoneyEdit"
                    style="@style/DialogEditTextStyle"
                    android:layout_width="match_parent"
                    android:digits="0123456789."
                    android:hint="@string/part_tips"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/DialogTitleStyle"
                    android:text="@string/type" />

                <Spinner
                    android:id="@+id/typeSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:entries="@array/type" />

                <TextView
                    style="@style/DialogTitleStyle"
                    android:layout_width="80dp"
                    android:text="@string/date" />

                <TextView
                    android:id="@+id/dateTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    app:drawableEndCompat="@drawable/ic_date_range_black_24dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/DialogTitleStyle"
                    android:text="@string/comment" />

                <EditText
                    android:id="@+id/commentTv"
                    style="@style/DialogEditTextStyle"
                    android:hint="@string/comment_tip"
                    android:imeOptions="actionDone"
                    android:inputType="textAutoComplete"
                    android:singleLine="true" />

            </LinearLayout>

            <Button
                android:id="@+id/okButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:text="@string/ok"
                android:textColor="@color/blue_500" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>